# UAV_search_and_rescue

./: .gitmodules  README.md
Docker/: Dockerfile  README.md
src/: README.md
src/basic_waypoint_pkg/: CMakeLists.txt
src/basic_waypoint_pkg/config/: trajectory_config.yaml
src/basic_waypoint_pkg/launch/: waypoint_mission.launch
src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc  planner_withyaml.cc
src/controller_pkg/src/: controller_node.cpp
src/next_waypoint/: CMakeLists.txt  README.md  package.xml
src/next_waypoint/launch/: nextpoint.launch
src/next_waypoint/src/: next_node.cc
src/planning/: CMakeLists.txt  README.md  package.xml
src/planning/include/: planning.h
src/planning/src/: planning_node.cpp
src/trajectory_visualization/: CMakeLists.txt  README.md  package.xml
src/trajectory_visualization/config/: traj.rviz
src/trajectory_visualization/launch/: traj_visualize.launch
src/trajectory_visualization/src/: traj_visualize_node.cpp
src/unity_bridge/: CMakeLists.txt
src/unity_bridge/launch/: unity_sim.launch
src/unity_bridge/src/: unity_state.cpp  victim.cpp  w_to_unity.cpp
src/victim_signal_gen/: CMakeLists.txt  README.md  package.xml
src/victim_signal_gen/include/: victim_signal_gen.h
src/victim_signal_gen/launch/: victim.launch
src/victim_signal_gen/msg/: SignalArray.msg  VictimArray.msg  VictimSignal.msg
src/victim_signal_gen/src/: victim_signal_gen.cpp  victim_signal_node.cpp
