<?xml version="1.0"?>
<package format="2">
  <name>trajectory_visualization</name>
  <version>0.0.0</version>
  <description>The trajectory_visualization package</description>

 
  <maintainer email="yd@todo.todo">yd</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>victim_signal_gen</build_depend>
  <build_export_depend>victim_signal_gen</build_export_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>victim_signal_gen</exec_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
